--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,15 +20,9 @@
     <header>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          <h1>josh</h1>
         </a>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-        {% if site.github.is_project_page %}
-          <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
-        {% endif %}
-        {% if site.github.is_user_page %}
-          <a href="{{ site.github.owner_url }}" class="button"><small>Follow me on</small> GitHub</a>
-        {% endif %}
+
       </div>
     </header>
 
@@ -39,7 +33,9 @@
         </section>
 
         <aside id="sidebar">
-          {% if site.show_downloads %}
+
+            <a href="https://www.twitter.com/_joshi3" class="button"><small>follow me on</small> twitter</a>
+
             <a href="{{ site.github.zip_url }}" class="button">
               <small>Download</small>
               .zip file
@@ -48,7 +44,6 @@
               <small>Download</small>
               .tar.gz file
             </a>
-          {% endif %}
 
           {% if site.github.is_project_page %}
             <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
