--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -27,7 +27,7 @@ header {
   padding-top: 40px;
   padding-bottom: 40px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
+  background: #d02222 url(../images/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
 }
 
@@ -49,7 +49,7 @@ header h2 {
   font-size: 26px;
   font-weight: normal;
   line-height: 1.3;
-  color: #9ddcff;
+  color: #cc0c0c;
   letter-spacing: 0;
 }
 
@@ -143,7 +143,7 @@ pre {
 }
 pre code {
   padding: 0;
-  color: #2879d0;
+  color: #d02222;
   background-color: #fff;
   border: none;
 }
@@ -201,7 +201,7 @@ form {
 #main-content h1:before {
   padding-right: 0.3em;
   margin-left: -0.9em;
-  color: #9ddcff;
+  color: #cc0c0c;
   content: "/";
 }
 
@@ -217,7 +217,7 @@ form {
   padding-right: 0.3em;
   margin-left: -1.5em;
   content: "//";
-  color: #9ddcff;
+  color: #cc0c0c;
 }
 
 #main-content h3 {
@@ -234,7 +234,7 @@ form {
   padding-right: 0.3em;
   margin-left: -2em;
   content: "///";
-  color: #9ddcff;
+  color: #cc0c0c;
 }
 
 #main-content h4 {
@@ -250,7 +250,7 @@ h4:before {
   padding-right: 0.3em;
   margin-left: -2.8em;
   content: "////";
-  color: #9ddcff;
+  color: #cc0c0c;
 }
 
 #main-content h5 {
@@ -264,7 +264,7 @@ h5:before {
   padding-right: 0.3em;
   margin-left: -3.2em;
   content: "/////";
-  color: #9ddcff;
+  color: #cc0c0c;
 }
 
 #main-content h6 {
@@ -278,7 +278,7 @@ h6:before {
   padding-right: 0.3em;
   margin-left: -3.7em;
   content: "//////";
-  color: #9ddcff;
+  color: #cc0c0c;
 }
 
 p {
@@ -409,9 +409,9 @@ footer a:hover {
     margin-top: 15px;
     font-size: 13px;
     line-height: 1;
-    color: #2879d0;
+    color: #d0d0d0;
     text-align: center;
-    background-color: #9ddcff;
+    background-color: #cc0c0c;
     background-image: none;
     border-radius: 5px;
     -moz-border-radius: 5px;
