--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -17,10 +17,10 @@ p {
 }
 
 a {
-  color: #2879d0;
+  color: #d02828;
 }
 a:hover {
-  color: #2268b2;
+  color: #b22222;
 }
 
 header {
@@ -28,7 +28,7 @@ header {
   padding-bottom: 40px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   background: #d02222 url(../images/header-bg.jpg) 0 0 repeat-x;
-  border-bottom: solid 1px #275da1;
+  border-bottom: solid 1px #a12727;
 }
 
 header h1 {
